--- a/.github/workflows/auto_deploy_nestjs.js.yml
+++ b/.github/workflows/auto_deploy_nestjs.js.yml
@@ -17,17 +17,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # - name: Display GitHub Username
-    #   run: echo "Repository:" ${{ github.repository }}
-
-    # - name: Display actor Name
-    #   run: echo "Actor:" ${{ github.actor }}
-
-    # - name: Display server VPS_IP
-    #   run: echo "VPS_IP:" ${{ secrets.VPS_IP }}
-
-    # - name: Display server VPS_PASSWORD
-    #   run: echo "VPS_PASSWORD:" ${{ secrets.VPS_PASSWORD }}
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: SSH to VPS and update project
       uses: appleboy/ssh-action@master
@@ -35,16 +29,15 @@ jobs:
         host: ${{ secrets.VPS_IP }}
         username: ${{ secrets.VPS_USERNAME }}
         password: ${{ secrets.VPS_PASSWORD }}  # Sử dụng nếu bạn dùng mật khẩu cho SSH
-        # key: ${{ secrets.VPS_SSH_KEY }}  # Sử dụng nếu bạn dùng khóa SSH
         script: |
           echo "Checking if the project directory exists..."
           if [ -d "/root/project_nestjs" ]; then
             echo "Tồn tại thư mục dự án"
             cd /root/project_nestjs
-      
+
             git pull
-            docker-compose -f docker-compose-api-project_nestjs.yml up -d --build         
-          else          
+            docker-compose -f docker-compose-api-project_nestjs.yml up -d --build
+          else
             echo "Không hề tồn tại thư mục dự án"
             mkdir -p /root/project_nestjs
             cd /root/project_nestjs
