--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@
 # DATABASE_URL=mysql://u599532461_test:Dulichkhapthegioi2023@154.49.245.105/u599532461_test
 
 
-# DATABASE_URL=mysql://root:159753@host.docker.internal/project_airbnb_050824
-DATABASE_URL=mysql://root:159753@localhost/project_airbnb_050824
+DATABASE_URL=mysql://root:159753@host.docker.internal/project_airbnb_050824
+# DATABASE_URL=mysql://root:159753@localhost/project_airbnb_050824
 
 ACCESS_TOKEN_KEY=12345
 
