--- a/docker-compose-api-project_nestjs.yml
+++ b/docker-compose-api-project_nestjs.yml
@@ -1,4 +1,17 @@
 services:
+  app:
+    image: 'jc21/nginx-proxy-manager:latest'
+    restart: unless-stopped
+    ports:
+      - '80:80'
+      - '81:81'
+      - '443:443'
+    volumes:
+      - ./data:/data
+      - ./letsencrypt:/etc/letsencrypt
+    networks:
+      - rent_room_network
+
   api_node:
     container_name: api_nestjs
     restart: always
@@ -10,6 +23,8 @@ services:
       - rent_room_network
     env_file:
       - ./.env
+    depends_on:
+      - app
 
 networks:
   rent_room_network:
