--- a/.github/workflows/auto_deploy_nestjs.js.yml
+++ b/.github/workflows/auto_deploy_nestjs.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Deploy to VPS BACKEND_040222333
+name: Deploy to VPS BACKEND_0402223
 
 on:
   push:
@@ -25,29 +25,29 @@ jobs:
 
     - name: SSH to VPS and update project
       uses: appleboy/ssh-action@master
-      # with:
-      #   host: ${{ secrets.VPS_IP }}
-      #   username: ${{ secrets.VPS_USERNAME }}
-      #   password: ${{ secrets.VPS_PASSWORD }}  # Sử dụng nếu bạn dùng mật khẩu cho SSH
-      #   script: |
-      #     echo "Checking if the project directory exists..."
-      #     if [ -d "/root/project_nestjs" ]; then
-      #       echo "Tồn tại thư mục dự án"
-      #       cd /root/project_nestjs
+      with:
+        host: ${{ secrets.VPS_IP }}
+        username: ${{ secrets.VPS_USERNAME }}
+        password: ${{ secrets.VPS_PASSWORD }}  # Sử dụng nếu bạn dùng mật khẩu cho SSH
+        # script: |
+        #   echo "Checking if the project directory exists..."
+        #   if [ -d "/root/project_nestjs" ]; then
+        #     echo "Tồn tại thư mục dự án"
+        #     cd /root/project_nestjs
 
-      #       git pull
-      #       docker-compose -f docker-compose-api-project_nestjs.yml up -d --build --timeout 3000
-      #       docker system prune -f
-      #     else
-      #       echo "Không hề tồn tại thư mục dự án"
-      #       mkdir -p /root/project_nestjs
-      #       cd /root/project_nestjs
+        #     git pull
+        #     docker-compose -f docker-compose-api-project_nestjs.yml up -d --build --timeout 3000
+        #     docker system prune -f
+        #   else
+        #     echo "Không hề tồn tại thư mục dự án"
+        #     mkdir -p /root/project_nestjs
+        #     cd /root/project_nestjs
 
-      #       git clone https://github.com/${{ github.repository }} /root/project_nestjs
-      #       docker-compose -f docker-compose-api-project_nestjs.yml up -d --timeout 3000
-      #       docker system prune -f
-      #     fi
-      #     echo "Hoàn thành công việc update API project_nestjs. Chúc mừng bạn đã hoàn thành"
+        #     git clone https://github.com/${{ github.repository }} /root/project_nestjs
+        #     docker-compose -f docker-compose-api-project_nestjs.yml up -d --timeout 3000
+        #     docker system prune -f
+        #   fi
+        #   echo "Hoàn thành công việc update API project_nestjs. Chúc mừng bạn đã hoàn thành"
 
         script: |
           echo "Xoa thu muc du an"
