--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,18 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d  # Ánh xạ thư mục chứa cấu hình Nginx vào container
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      # - /etc/letsencrypt:/etc/letsencrypt
     networks:
       - rent_room_network
 
-  api_node:
+  api_nestjs:
     container_name: api_nestjs
     restart: always
     build:
       context: ./
-    ports:
-      - "5000:5000"
+    # ports:
+    #   - "9000:9000"
     networks:
       - rent_room_network
     env_file:
@@ -27,6 +28,43 @@ services:
 networks:
   rent_room_network:
     driver: bridge
+
+
+
+
+
+# services:
+#   nginx:
+#     image: nginx:latest
+#     restart: always
+#     ports:
+#       - "80:80"
+#       - "443:443"
+#     volumes:
+#       - ./nginx/conf.d:/etc/nginx/conf.d  # Ánh xạ thư mục chứa cấu hình Nginx vào container
+#     networks:
+#       - rent_room_network
+
+#   api_node:
+#     container_name: api_nestjs
+#     restart: always
+#     build:
+#       context: ./
+#     ports:
+#       - "5000:5000"
+#     networks:
+#       - rent_room_network
+#     env_file:
+#       - ./.env
+#     depends_on:
+#       - nginx
+
+# networks:
+#   rent_room_network:
+#     driver: bridge
+
+
+
 
 
 
