--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name api.selcoool.com www.selcoool.com;
+        server_name api.selcoool.com www.api.selcoool.com;
 
         # SSL configuration
         ssl_certificate /etc/letsencrypt/live/api.selcoool.com/fullchain.pem;
