--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,13 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      # - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      # # - /etc/letsencrypt:/etc/letsencrypt
+
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      # - /etc/letsencrypt:/etc/letsencrypt
+      # - ./nginx/sites-available:/etc/nginx/sites-available
+      # - ./nginx/sites-enabled:/etc/nginx/sites-enabled
+      - /etc/letsencrypt:/etc/letsencrypt
     networks:
       - rent_room_network
 
