--- a/.github/workflows/auto_deploy_nestjs.js.yml
+++ b/.github/workflows/auto_deploy_nestjs.js.yml
@@ -29,25 +29,25 @@ jobs:
         host: ${{ secrets.VPS_IP }}
         username: ${{ secrets.VPS_USERNAME }}
         password: ${{ secrets.VPS_PASSWORD }}  # Sử dụng nếu bạn dùng mật khẩu cho SSH
-        script: |
-          echo "Checking if the project directory exists..."
-          if [ -d "/root/project_nestjs" ]; then
-            echo "Tồn tại thư mục dự án"
-            cd /root/project_nestjs
+        # script: |
+        #   echo "Checking if the project directory exists..."
+        #   if [ -d "/root/project_nestjs" ]; then
+        #     echo "Tồn tại thư mục dự án"
+        #     cd /root/project_nestjs
 
-            git pull
-            docker-compose -f docker-compose-api-project_nestjs.yml up -d --build --timeout 3000
-            docker system prune -f
-          else
-            echo "Không hề tồn tại thư mục dự án"
-            mkdir -p /root/project_nestjs
-            cd /root/project_nestjs
+        #     git pull
+        #     docker-compose -f docker-compose-api-project_nestjs.yml up -d --build --timeout 3000
+        #     docker system prune -f
+        #   else
+        #     echo "Không hề tồn tại thư mục dự án"
+        #     mkdir -p /root/project_nestjs
+        #     cd /root/project_nestjs
 
-            git clone https://github.com/${{ github.repository }} /root/project_nestjs
-            docker-compose -f docker-compose-api-project_nestjs.yml up -d --timeout 3000
-            docker system prune -f
-          fi
-          echo "Hoàn thành công việc update API project_nestjs. Chúc mừng bạn đã hoàn thành"
+        #     git clone https://github.com/${{ github.repository }} /root/project_nestjs
+        #     docker-compose -f docker-compose-api-project_nestjs.yml up -d --timeout 3000
+        #     docker system prune -f
+        #   fi
+        #   echo "Hoàn thành công việc update API project_nestjs. Chúc mừng bạn đã hoàn thành"
 
         # script: |
         #   echo "Xoa thu muc du an"
